--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
